# scsolver

./: ChangeLog  DevelopmentPlan.md  HackersGuide.md  ProjectHome.md  README  SensitivityAnalysis.md
ext/: Addons.xcu  Makefile.in  ProtocolHandler.xcu  build.bat  configure.ac  description.xml
ext/help/en/org.go-oo.CalcSolver/: main.xhp
ext/translation/cs/: scsolver.properties
ext/translation/de/: scsolver.properties
ext/translation/en-US/: scsolver.properties
ext/translation/es/: scsolver.properties
ext/translation/fr/: scsolver.properties
ext/translation/hu/: scsolver.properties
ext/translation/ja/: scsolver.properties
ext/translation/ka/: scsolver.properties
ext/translation/ko/: scsolver.properties
ext/translation/pt/: scsolver.properties
ext/translation/ru/: scsolver.properties
ext/translation/sv/: scsolver.properties
ext/translation/tr/: scsolver.properties
ext/translation/zh-CN/: scsolver.properties
prj/: build.lst  d.lst
source/inc/: basedlg.hxx  baselistener.hxx  dialog.hxx  listener.hxx  lpbuilder.hxx  msgdlg.hxx  nlpbuilder.hxx  option.hxx  optiondlg.hxx  resmgr.hxx  scsolver.hrc  solvemodel.hxx  solver.hxx  type.hxx  unoglobal.hxx  unohelper.hxx  xcalc.hxx
source/inc/numeric/: baselinesearch.hxx  bisectionsearch.hxx  cellfuncobj.hxx  cycliccoordinate.hxx  diff.hxx  exception.hxx  funcobj.hxx  hookejeeves.hxx  lpbase.hxx  lpmodel.hxx  lpsimplex.hxx  lpsolve.hxx  lpuno.hxx  matrix.hxx  nlpbase.hxx  nlpmodel.hxx  penalty.hxx  polyeqnsolver.hxx  quadfitlinesearch.hxx  quasinewton.hxx  rosenbrock.hxx  testtool.hxx  type.hxx
source/inc/tool/: global.hxx  timer.hxx
source/numeric/: baselinesearch.cxx  bisectionsearch.cxx  bisectionsearch_test.cxx  cellfuncobj.cxx  cycliccoordinate.cxx  cycliccoordinate_test.cxx  diff.cxx  diff_test.cxx  funcobj.cxx  funcobj_test.cxx  hookejeeves.cxx  hookejeeves_test.cxx  lpbase.cxx  lpmodel.cxx  lpsimplex.cxx  lpsolve.cxx  lpuno.cxx  makefile.mk  matrix.cxx  matrix_test.cxx  nlpbase.cxx  nlpmodel.cxx  penalty.cxx  penalty_test.cxx  polyeqnsolver.cxx  polyeqnsolver_test.cxx  quadfitlinesearch.cxx  quadfitlinesearch_test.cxx  quasinewton.cxx  quasinewton_test.cxx  rosenbrock.cxx  rosenbrock_test.cxx
source/service/: service.cxx
source/tool/: global.cxx  timer.cxx
source/ui/: basedlg.cxx  baselistener.cxx  dialog.cxx  listener.cxx  lpbuilder.cxx  msgdlg.cxx  nlpbuilder.cxx  option.cxx  optiondlg.cxx  resmgr.cxx  solvemodel.cxx  unoglobal.cxx  unohelper.cxx  xcalc.cxx
util/: makefile.mk  makefile.pmk
workben/optimizer/nlp_skel/: Makefile  main.cxx  myfunctor.cxx  myfunctor.hxx  myoptimizer.cxx  myoptimizer.hxx
workben/testcase/nlp/: tc1_distance.ods
workben/unittest/: Makefile
